--- a/index.html
+++ b/index.html
@@ -6,68 +6,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/index.css">
+    <!--<link rel="stylesheet" href="./estilos/card.css">-->
     <title>Painel de controle de tempo</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="card">
-            <img src="./images/image-jeremy.png" alt="">
-            <span>Report for</span>
-            <h1>Jeremy Robson</h1>
+        <div class="card Perfil">
+            <div class="infoPerfil">
+                <div class="containerImgPerfil"><img src="./images/image-jeremy.png" alt=""></div>
+                <span>Report for</span>
+                <h1>Jeremy Robson</h1>
+            </div>
+            <div class="dailyWeeklyMonthly">
+                <span>Daily</span>
+                <span>Weekly</span>
+                <span>Monthly</span>
+            </div>
         </div>
         <div class="card Work">
             <div class="imgContainer"><img class="cardIcon" src="./images/icon-work.svg" alt=""></div>
             <div class="mainCard">
                 <h2>Work</h2>
-                <span>...</span>
+                <span class="dots">...</span>
                 <p>32hrs</p>
-                <span>Last week - 36hrs</span>
+                <span class="lastWeek">Last week - 36hrs</span>
             </div>
         </div>
         <div class="card Play">
             <div class="imgContainer"><img class="cardIcon" src="./images/icon-play.svg" alt=""></div>
             <div class="mainCard">
                 <h2>Play</h2>
-                <span>...</span>
+                <span class="dots">...</span>
                 <p>10hrs</p>
-                <span>Last week - 8hrs</span>
+                <span class="lastWeek">Last week - 8hrs</span>
             </div>
         </div>
         <div class="card Study">
             <div class="imgContainer"><img class="cardIcon" src="./images/icon-study.svg" alt=""></div>
             <div class="mainCard">
                 <h2>Study</h2>
-                <span>...</span>
+                <span class="dots">...</span>
                 <p>4hrs</p>
-                <span>Last week - 7hrs</span>
+                <span class="lastWeek">Last week - 7hrs</span>
             </div>
         </div>
         <div class="card Exercise">
             <div class="imgContainer"><img class="cardIcon" src="./images/icon-exercise.svg" alt=""></div>
             <div class="mainCard">
                 <h2>Exercise</h2>
-                <span>...</span>
+                <span class="dots">...</span>
                 <p>4hrs</p>
-                <span>Last week - 5hrs</span>
+                <span class="lastWeek">Last week - 5hrs</span>
             </div>
         </div>
         <div class="card Social">
             <div class="imgContainer"><img class="cardIcon" src="./images/icon-social.svg" alt=""></div>
             <div class="mainCard">
                 <h2>Social</h2>
-                <span>...</span>
+                <span class="dots">...</span>
                 <p>5hrs</p>
-                <span>Last week - 10hrs</span>
+                <span class="lastWeek">Last week - 10hrs</span>
             </div>
         </div>
         <div class="card SelfCare">
             <div class="imgContainer"><img class="cardIcon" src="./images/icon-self-care.svg" alt=""></div>
             <div class="mainCard">
                 <h2>Self Care</h2>
-                <span>...</span>
+                <span class="dots">...</span>
                 <p>2hrs</p>
-                <span>Last week - 2hrs</span>
+                <span class="lastWeek">Last week - 2hrs</span>
             </div>
         </div>
     </div>
